# section_6

./: .gitignore  README.md  app.ipynb  pyproject.toml  streamlit_app.py
data/: lore.txt
valorant_agents_db/: index.faiss  index.pkl
