[project]
name = "section-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.3.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.1",
]
